// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-menu render with args { label: 'batman menu' } 1`] = `
<mg-menu aria-label="batman menu" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="true" data-style-direction-horizontal role="menuitem" status="visible">
    <mock:shadow-root>
      <mg-popover>
        <mock:shadow-root>
          <slot></slot>
          <div class="mg-popover" id="mg-popover-test_0" style="position: fixed; left: 0; top: 0; margin: 0;">
            <div class="mg-popover__title">
              <slot name="title"></slot>
            </div>
            <slot name="content"></slot>
            <div data-popper-arrow style="position: absolute;"></div>
          </div>
        </mock:shadow-root>
        <button aria-controls="mg-popover-test_0" aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--visible" tabindex="0">
          <slot name="illustration"></slot>
          <div class="mg-menu-item__navigation-button-center">
            <div class="mg-menu-item__navigation-button-text-content">
              <slot name="label"></slot>
              <slot name="information"></slot>
            </div>
            <slot name="metadata"></slot>
          </div>
          <span class="mg-a11y-animation mg-menu-item__navigation-button-chevron">
            <mg-icon icon="chevron-down"></mg-icon>
          </span>
        </button>
        <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level" slot="content">
          <slot></slot>
        </div>
      </mg-popover>
    </mock:shadow-root>
    <span slot="label" title="batman">
      batman
    </span>
    <mg-menu aria-label="batman - submenu" direction="vertical" role="menu">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <mg-menu-item aria-haspopup="true" data-style-direction-vertical role="menuitem" status="visible">
        <mock:shadow-root>
          <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--vertical mg-menu-item__navigation-button--visible" tabindex="0">
            <slot name="illustration"></slot>
            <div class="mg-menu-item__navigation-button-center">
              <div class="mg-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
              <slot name="metadata"></slot>
            </div>
            <span class="mg-a11y-animation mg-menu-item__navigation-button-chevron">
              <mg-icon icon="chevron-down"></mg-icon>
            </span>
          </button>
          <div class="mg-menu-item__collapse-container" hidden="">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <span slot="label" title="batman begins">
          batman begins
        </span>
        <mg-menu aria-label="batman begins - submenu" direction="vertical" role="menu">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <mg-menu-item aria-haspopup="false" data-level="2" data-style-direction-vertical role="menuitem" status="visible">
            <mock:shadow-root>
              <button class="mg-menu-item__navigation-button mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--vertical mg-menu-item__navigation-button--visible" tabindex="0">
                <slot name="illustration"></slot>
                <div class="mg-menu-item__navigation-button-center">
                  <div class="mg-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                  <slot name="metadata"></slot>
                </div>
              </button>
              <div class="mg-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="movie">
              movie
            </span>
          </mg-menu-item>
        </mg-menu>
      </mg-menu-item>
      <mg-menu-item aria-haspopup="false" data-style-direction-vertical role="menuitem" status="visible">
        <mock:shadow-root>
          <button class="mg-menu-item__navigation-button mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--vertical mg-menu-item__navigation-button--visible" tabindex="0">
            <slot name="illustration"></slot>
            <div class="mg-menu-item__navigation-button-center">
              <div class="mg-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
              <slot name="metadata"></slot>
            </div>
          </button>
          <div class="mg-menu-item__collapse-container" hidden="">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <span slot="label" title="joker: the dark knight">
          joker: the dark knight
        </span>
      </mg-menu-item>
      <mg-menu-item aria-haspopup="false" data-style-direction-vertical role="menuitem" status="visible">
        <mock:shadow-root>
          <button class="mg-menu-item__navigation-button mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--vertical mg-menu-item__navigation-button--visible" tabindex="0">
            <slot name="illustration"></slot>
            <div class="mg-menu-item__navigation-button-center">
              <div class="mg-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
              <slot name="metadata"></slot>
            </div>
          </button>
          <div class="mg-menu-item__collapse-container" hidden="">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <span slot="label" title="bane: the dark knight rise">
          bane: the dark knight rise
        </span>
      </mg-menu-item>
    </mg-menu>
  </mg-menu-item>
  <mg-menu-item aria-haspopup="true" data-style-direction-horizontal role="menuitem" status="visible">
    <mock:shadow-root>
      <mg-popover>
        <mock:shadow-root>
          <slot></slot>
          <div class="mg-popover" id="mg-popover-test_5" style="position: fixed; left: 0; top: 0; margin: 0;">
            <div class="mg-popover__title">
              <slot name="title"></slot>
            </div>
            <slot name="content"></slot>
            <div data-popper-arrow style="position: absolute;"></div>
          </div>
        </mock:shadow-root>
        <button aria-controls="mg-popover-test_5" aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--visible" tabindex="0">
          <slot name="illustration"></slot>
          <div class="mg-menu-item__navigation-button-center">
            <div class="mg-menu-item__navigation-button-text-content">
              <slot name="label"></slot>
              <slot name="information"></slot>
            </div>
            <slot name="metadata"></slot>
          </div>
          <span class="mg-a11y-animation mg-menu-item__navigation-button-chevron">
            <mg-icon icon="chevron-down"></mg-icon>
          </span>
        </button>
        <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level" slot="content">
          <slot></slot>
        </div>
      </mg-popover>
    </mock:shadow-root>
    <span slot="label" title="joker">
      joker
    </span>
    <div>
      <h2>
        This is a joker card
      </h2>
      <p>
        If you don't know the joker, you can watch the movie.
      </p>
    </div>
  </mg-menu-item>
  <mg-menu-item aria-haspopup="false" data-style-direction-horizontal data-style-position-last role="menuitem" status="visible">
    <mock:shadow-root>
      <button class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--visible" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-center">
          <div class="mg-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
          <slot name="metadata"></slot>
        </div>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="bane">
      bane
    </span>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu render with args { label: 'batman menu', direction: 'horizontal' } 1`] = `
<mg-menu aria-label="batman menu" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="true" data-style-direction-horizontal role="menuitem" status="visible">
    <mock:shadow-root>
      <mg-popover>
        <mock:shadow-root>
          <slot></slot>
          <div class="mg-popover" id="mg-popover-test_0" style="position: fixed; left: 0; top: 0; margin: 0;">
            <div class="mg-popover__title">
              <slot name="title"></slot>
            </div>
            <slot name="content"></slot>
            <div data-popper-arrow style="position: absolute;"></div>
          </div>
        </mock:shadow-root>
        <button aria-controls="mg-popover-test_0" aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--visible" tabindex="0">
          <slot name="illustration"></slot>
          <div class="mg-menu-item__navigation-button-center">
            <div class="mg-menu-item__navigation-button-text-content">
              <slot name="label"></slot>
              <slot name="information"></slot>
            </div>
            <slot name="metadata"></slot>
          </div>
          <span class="mg-a11y-animation mg-menu-item__navigation-button-chevron">
            <mg-icon icon="chevron-down"></mg-icon>
          </span>
        </button>
        <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level" slot="content">
          <slot></slot>
        </div>
      </mg-popover>
    </mock:shadow-root>
    <span slot="label" title="batman">
      batman
    </span>
    <mg-menu aria-label="batman - submenu" direction="vertical" role="menu">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <mg-menu-item aria-haspopup="true" data-style-direction-vertical role="menuitem" status="visible">
        <mock:shadow-root>
          <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--vertical mg-menu-item__navigation-button--visible" tabindex="0">
            <slot name="illustration"></slot>
            <div class="mg-menu-item__navigation-button-center">
              <div class="mg-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
              <slot name="metadata"></slot>
            </div>
            <span class="mg-a11y-animation mg-menu-item__navigation-button-chevron">
              <mg-icon icon="chevron-down"></mg-icon>
            </span>
          </button>
          <div class="mg-menu-item__collapse-container" hidden="">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <span slot="label" title="batman begins">
          batman begins
        </span>
        <mg-menu aria-label="batman begins - submenu" direction="vertical" role="menu">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <mg-menu-item aria-haspopup="false" data-level="2" data-style-direction-vertical role="menuitem" status="visible">
            <mock:shadow-root>
              <button class="mg-menu-item__navigation-button mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--vertical mg-menu-item__navigation-button--visible" tabindex="0">
                <slot name="illustration"></slot>
                <div class="mg-menu-item__navigation-button-center">
                  <div class="mg-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                  <slot name="metadata"></slot>
                </div>
              </button>
              <div class="mg-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="movie">
              movie
            </span>
          </mg-menu-item>
        </mg-menu>
      </mg-menu-item>
      <mg-menu-item aria-haspopup="false" data-style-direction-vertical role="menuitem" status="visible">
        <mock:shadow-root>
          <button class="mg-menu-item__navigation-button mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--vertical mg-menu-item__navigation-button--visible" tabindex="0">
            <slot name="illustration"></slot>
            <div class="mg-menu-item__navigation-button-center">
              <div class="mg-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
              <slot name="metadata"></slot>
            </div>
          </button>
          <div class="mg-menu-item__collapse-container" hidden="">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <span slot="label" title="joker: the dark knight">
          joker: the dark knight
        </span>
      </mg-menu-item>
      <mg-menu-item aria-haspopup="false" data-style-direction-vertical role="menuitem" status="visible">
        <mock:shadow-root>
          <button class="mg-menu-item__navigation-button mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--vertical mg-menu-item__navigation-button--visible" tabindex="0">
            <slot name="illustration"></slot>
            <div class="mg-menu-item__navigation-button-center">
              <div class="mg-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
              <slot name="metadata"></slot>
            </div>
          </button>
          <div class="mg-menu-item__collapse-container" hidden="">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <span slot="label" title="bane: the dark knight rise">
          bane: the dark knight rise
        </span>
      </mg-menu-item>
    </mg-menu>
  </mg-menu-item>
  <mg-menu-item aria-haspopup="true" data-style-direction-horizontal role="menuitem" status="visible">
    <mock:shadow-root>
      <mg-popover>
        <mock:shadow-root>
          <slot></slot>
          <div class="mg-popover" id="mg-popover-test_5" style="position: fixed; left: 0; top: 0; margin: 0;">
            <div class="mg-popover__title">
              <slot name="title"></slot>
            </div>
            <slot name="content"></slot>
            <div data-popper-arrow style="position: absolute;"></div>
          </div>
        </mock:shadow-root>
        <button aria-controls="mg-popover-test_5" aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--visible" tabindex="0">
          <slot name="illustration"></slot>
          <div class="mg-menu-item__navigation-button-center">
            <div class="mg-menu-item__navigation-button-text-content">
              <slot name="label"></slot>
              <slot name="information"></slot>
            </div>
            <slot name="metadata"></slot>
          </div>
          <span class="mg-a11y-animation mg-menu-item__navigation-button-chevron">
            <mg-icon icon="chevron-down"></mg-icon>
          </span>
        </button>
        <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level" slot="content">
          <slot></slot>
        </div>
      </mg-popover>
    </mock:shadow-root>
    <span slot="label" title="joker">
      joker
    </span>
    <div>
      <h2>
        This is a joker card
      </h2>
      <p>
        If you don't know the joker, you can watch the movie.
      </p>
    </div>
  </mg-menu-item>
  <mg-menu-item aria-haspopup="false" data-style-direction-horizontal data-style-position-last role="menuitem" status="visible">
    <mock:shadow-root>
      <button class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--visible" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-center">
          <div class="mg-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
          <slot name="metadata"></slot>
        </div>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="bane">
      bane
    </span>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu render with args { label: 'batman menu', direction: 'vertical' } 1`] = `
<mg-menu aria-label="batman menu" direction="vertical" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="true" data-style-direction-vertical role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--vertical mg-menu-item__navigation-button--visible" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-center">
          <div class="mg-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
          <slot name="metadata"></slot>
        </div>
        <span class="mg-a11y-animation mg-menu-item__navigation-button-chevron">
          <mg-icon icon="chevron-down"></mg-icon>
        </span>
      </button>
      <div class="mg-menu-item__collapse-container" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="batman">
      batman
    </span>
    <mg-menu aria-label="batman - submenu" direction="vertical" role="menu">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <mg-menu-item aria-haspopup="true" data-level="2" data-style-direction-vertical role="menuitem" status="visible">
        <mock:shadow-root>
          <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--vertical mg-menu-item__navigation-button--visible" tabindex="0">
            <slot name="illustration"></slot>
            <div class="mg-menu-item__navigation-button-center">
              <div class="mg-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
              <slot name="metadata"></slot>
            </div>
            <span class="mg-a11y-animation mg-menu-item__navigation-button-chevron">
              <mg-icon icon="chevron-down"></mg-icon>
            </span>
          </button>
          <div class="mg-menu-item__collapse-container" hidden="">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <span slot="label" title="batman begins">
          batman begins
        </span>
        <mg-menu aria-label="batman begins - submenu" direction="vertical" role="menu">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <mg-menu-item aria-haspopup="false" data-level="3" data-style-direction-vertical role="menuitem" status="visible">
            <mock:shadow-root>
              <button class="mg-menu-item__navigation-button mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--vertical mg-menu-item__navigation-button--visible" tabindex="0">
                <slot name="illustration"></slot>
                <div class="mg-menu-item__navigation-button-center">
                  <div class="mg-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                  <slot name="metadata"></slot>
                </div>
              </button>
              <div class="mg-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="movie">
              movie
            </span>
          </mg-menu-item>
        </mg-menu>
      </mg-menu-item>
      <mg-menu-item aria-haspopup="false" data-level="2" data-style-direction-vertical role="menuitem" status="visible">
        <mock:shadow-root>
          <button class="mg-menu-item__navigation-button mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--vertical mg-menu-item__navigation-button--visible" tabindex="0">
            <slot name="illustration"></slot>
            <div class="mg-menu-item__navigation-button-center">
              <div class="mg-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
              <slot name="metadata"></slot>
            </div>
          </button>
          <div class="mg-menu-item__collapse-container" hidden="">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <span slot="label" title="joker: the dark knight">
          joker: the dark knight
        </span>
      </mg-menu-item>
      <mg-menu-item aria-haspopup="false" data-level="2" data-style-direction-vertical role="menuitem" status="visible">
        <mock:shadow-root>
          <button class="mg-menu-item__navigation-button mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--vertical mg-menu-item__navigation-button--visible" tabindex="0">
            <slot name="illustration"></slot>
            <div class="mg-menu-item__navigation-button-center">
              <div class="mg-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
              <slot name="metadata"></slot>
            </div>
          </button>
          <div class="mg-menu-item__collapse-container" hidden="">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <span slot="label" title="bane: the dark knight rise">
          bane: the dark knight rise
        </span>
      </mg-menu-item>
    </mg-menu>
  </mg-menu-item>
  <mg-menu-item aria-haspopup="true" data-style-direction-vertical role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--vertical mg-menu-item__navigation-button--visible" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-center">
          <div class="mg-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
          <slot name="metadata"></slot>
        </div>
        <span class="mg-a11y-animation mg-menu-item__navigation-button-chevron">
          <mg-icon icon="chevron-down"></mg-icon>
        </span>
      </button>
      <div class="mg-menu-item__collapse-container" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="joker">
      joker
    </span>
    <div>
      <h2>
        This is a joker card
      </h2>
      <p>
        If you don't know the joker, you can watch the movie.
      </p>
    </div>
  </mg-menu-item>
  <mg-menu-item aria-haspopup="false" data-style-direction-vertical role="menuitem" status="visible">
    <mock:shadow-root>
      <button class="mg-menu-item__navigation-button mg-menu-item__navigation-button--size-regular mg-menu-item__navigation-button--vertical mg-menu-item__navigation-button--visible" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-center">
          <div class="mg-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
          <slot name="metadata"></slot>
        </div>
      </button>
      <div class="mg-menu-item__collapse-container" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="bane">
      bane
    </span>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-popover Should render with element 1`] = `
<mg-popover>
  <mock:shadow-root>
    <slot></slot>
    <div class="mg-popover" id="identifier" style="position: fixed; left: 0; top: 0; margin: 0;">
      <div class="mg-popover__title">
        <slot name="title"></slot>
      </div>
      <slot name="content"></slot>
      <div class="mg-popover__arrow" data-popper-arrow style="position: absolute;"></div>
    </div>
  </mock:shadow-root>
  <h2 slot="title">
    Blu bli blo bla
  </h2>
  <p slot="content">
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </p>
  <mg-button aria-controls="identifier" aria-expanded="false" role="button" tabindex="0">
    <mock:shadow-root>
      <div class="mg-button mg-button--primary" id="identifier-btn">
        <div class="mg-button__content">
          <slot></slot>
        </div>
      </div>
    </mock:shadow-root>
    mg-button
  </mg-button>
</mg-popover>
`;

exports[`mg-popover Should render with element 2`] = `
<mg-popover>
  <mock:shadow-root>
    <slot></slot>
    <div class="mg-popover" id="identifier" style="position: fixed; left: 0; top: 0; margin: 0;">
      <div class="mg-popover__title">
        <slot name="title"></slot>
      </div>
      <slot name="content"></slot>
      <div class="mg-popover__arrow" data-popper-arrow style="position: absolute;"></div>
    </div>
  </mock:shadow-root>
  <h2 slot="title">
    Blu bli blo bla
  </h2>
  <p slot="content">
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </p>
  <mg-button aria-controls="identifier" aria-expanded="false" role="button" tabindex="0">
    <mock:shadow-root>
      <div class="mg-button mg-button--primary" id="identifier-btn">
        <div class="mg-button__content">
          <slot></slot>
        </div>
      </div>
    </mock:shadow-root>
    mg-button
  </mg-button>
</mg-popover>
`;

exports[`mg-popover Should render with element 3`] = `
<mg-popover>
  <mock:shadow-root>
    <slot></slot>
    <div class="mg-popover" data-show id="identifier" style="position: fixed; left: 0; top: 0; margin: 0;">
      <div class="mg-popover__title">
        <slot name="title"></slot>
      </div>
      <slot name="content"></slot>
      <div class="mg-popover__arrow" data-popper-arrow style="position: absolute;"></div>
    </div>
  </mock:shadow-root>
  <h2 slot="title">
    Blu bli blo bla
  </h2>
  <p slot="content">
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </p>
  <mg-button aria-controls="identifier" aria-expanded="true" role="button" tabindex="0">
    <mock:shadow-root>
      <div class="mg-button mg-button--primary" id="identifier-btn">
        <div class="mg-button__content">
          <slot></slot>
        </div>
      </div>
    </mock:shadow-root>
    mg-button
  </mg-button>
</mg-popover>
`;

exports[`mg-popover Should render with element 4`] = `
<mg-popover>
  <mock:shadow-root>
    <slot></slot>
    <div class="mg-popover" id="identifier" style="position: fixed; left: 0; top: 0; margin: 0;">
      <mg-button aria-label="Close" is-icon="" role="button" tabindex="0">
        <mock:shadow-root>
          <div class="mg-button mg-button--flat mg-button--icon">
            <div class="mg-button__content">
              <slot></slot>
            </div>
          </div>
        </mock:shadow-root>
        <mg-icon icon="cross"></mg-icon>
      </mg-button>
      <div class="mg-popover__title">
        <slot name="title"></slot>
      </div>
      <slot name="content"></slot>
      <div class="mg-popover__arrow" data-popper-arrow style="position: absolute;"></div>
    </div>
  </mock:shadow-root>
  <h2 slot="title">
    Blu bli blo bla
  </h2>
  <p slot="content">
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </p>
  <mg-button aria-controls="identifier" aria-expanded="false" role="button" tabindex="0">
    <mock:shadow-root>
      <div class="mg-button mg-button--primary" id="identifier-btn">
        <div class="mg-button__content">
          <slot></slot>
        </div>
      </div>
    </mock:shadow-root>
    mg-button
  </mg-button>
</mg-popover>
`;

exports[`mg-popover Should render with element 5`] = `
<mg-popover>
  <mock:shadow-root>
    <slot></slot>
    <div class="mg-popover" data-show id="identifier" style="position: fixed; left: 0; top: 0; margin: 0;">
      <div class="mg-popover__title">
        <slot name="title"></slot>
      </div>
      <slot name="content"></slot>
      <div class="mg-popover__arrow" data-popper-arrow style="position: absolute;"></div>
    </div>
  </mock:shadow-root>
  <h2 slot="title">
    Blu bli blo bla
  </h2>
  <p slot="content">
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </p>
  <mg-button aria-controls="identifier" aria-expanded="true" role="button" tabindex="0">
    <mock:shadow-root>
      <div class="mg-button mg-button--primary" id="identifier-btn">
        <div class="mg-button__content">
          <slot></slot>
        </div>
      </div>
    </mock:shadow-root>
    mg-button
  </mg-button>
</mg-popover>
`;

exports[`mg-popover Should render with element 6`] = `
<mg-popover lang="fr">
  <mock:shadow-root>
    <slot></slot>
    <div class="mg-popover" id="identifier" style="position: fixed; left: 0; top: 0; margin: 0;">
      <mg-button aria-label="Fermer" is-icon="" role="button" tabindex="0">
        <mock:shadow-root>
          <div class="mg-button mg-button--flat mg-button--icon">
            <div class="mg-button__content">
              <slot></slot>
            </div>
          </div>
        </mock:shadow-root>
        <mg-icon icon="cross"></mg-icon>
      </mg-button>
      <div class="mg-popover__title">
        <slot name="title"></slot>
      </div>
      <slot name="content"></slot>
      <div class="mg-popover__arrow" data-popper-arrow style="position: absolute;"></div>
    </div>
  </mock:shadow-root>
  <h2 slot="title">
    Blu bli blo bla
  </h2>
  <p slot="content">
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </p>
  <mg-button aria-controls="identifier" aria-expanded="false" role="button" tabindex="0">
    <mock:shadow-root>
      <div class="mg-button mg-button--primary" id="identifier-btn">
        <div class="mg-button__content">
          <slot></slot>
        </div>
      </div>
    </mock:shadow-root>
    mg-button
  </mg-button>
</mg-popover>
`;

exports[`mg-popover Should render with element 7`] = `
<mg-popover lang="xx">
  <mock:shadow-root>
    <slot></slot>
    <div class="mg-popover" id="identifier" style="position: fixed; left: 0; top: 0; margin: 0;">
      <mg-button aria-label="Close" is-icon="" role="button" tabindex="0">
        <mock:shadow-root>
          <div class="mg-button mg-button--flat mg-button--icon">
            <div class="mg-button__content">
              <slot></slot>
            </div>
          </div>
        </mock:shadow-root>
        <mg-icon icon="cross"></mg-icon>
      </mg-button>
      <div class="mg-popover__title">
        <slot name="title"></slot>
      </div>
      <slot name="content"></slot>
      <div class="mg-popover__arrow" data-popper-arrow style="position: absolute;"></div>
    </div>
  </mock:shadow-root>
  <h2 slot="title">
    Blu bli blo bla
  </h2>
  <p slot="content">
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </p>
  <mg-button aria-controls="identifier" aria-expanded="false" role="button" tabindex="0">
    <mock:shadow-root>
      <div class="mg-button mg-button--primary" id="identifier-btn">
        <div class="mg-button__content">
          <slot></slot>
        </div>
      </div>
    </mock:shadow-root>
    mg-button
  </mg-button>
</mg-popover>
`;
